--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,23 @@
+# Python version
+python==3.11  # PyMC not compatible with higher version
+
+# Dataframes, arrays and math
 numpy>=1.24.3
 pandas>=2.0.3
+polars>=0.20.7
+scipy>=1.11.4
+
+# Plotting
 matplotlib>=3.7.1
 seaborn>=0.12.2
+
+# Geospatial analysis
 geopandas>=0.14.2
 rasterio>=1.3.9
 shapely>=2.0.1
 pygeoprocessing>=2.4.2
-polars>=0.20.7
-scipy>=1.11.4
 rasterstats>=0.19.0
+
+# Modelling
+pymc>=5.6.1
+numpyro>=0.13.2  # For using JAX backend with PyMC   
