--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -36,7 +36,7 @@ repos:
     rev: v1.8.0
     hooks:
       - id: mypy
-        args: [--strict, --ignore-missing-imports]
+        args: [--ignore-missing-imports]
         additional_dependencies: [tokenize-rt==3.2.0]
 
   # pyupgrade for automatically upgrading syntax for newer python versions
