--- a/setup.cfg
+++ b/setup.cfg
@@ -3,19 +3,28 @@ python_requires = >=3.11, <3.12
 
 [flake8]
 max-line-length = 88
+ignore =
+    D100,
+    D205,
+    D400
+# D100 Missing docstring in public module
+# D400 First line should end with a period
+# D205  1 blank line required between summary line and description
 
 [isort]
 profile = black
 
 [mypy]
 python_version = 3.11
-strict_optional = True  # Handling of None and optional types
-ignore_missing_imports = True  # Avoid errors for missing type stubs in external libraries
-disallow_untyped_defs = False  # Allow functions without type annotations
-disallow_incomplete_defs = False  # Allow incomplete type annotations
-check_untyped_defs = True  # Type check the body of functions without type annotations
-
-# Warn about these issues
+# Untyped definitions and calls
+ignore_missing_imports = True
+disallow_untyped_defs = False
+disallow_incomplete_defs = False
+check_untyped_defs = True
+disallow_untyped_calls = False
+# None and Optional handling
+strict_optional = True
+# Warnings
 warn_unreachable = True
 warn_redundant_casts = True
 warn_unused_ignores = True
