--- a/setup.cfg
+++ b/setup.cfg
@@ -17,11 +17,11 @@ profile = black
 [mypy]
 python_version = 3.11
 # Untyped definitions and calls
-ignore_missing_imports = True
-disallow_untyped_defs = False
-disallow_incomplete_defs = False
-check_untyped_defs = True
+ignore_missing_imports = False
+disallow_untyped_defs = True
+disallow_incomplete_defs = True
 disallow_untyped_calls = False
+check_untyped_defs = True
 # None and Optional handling
 strict_optional = True
 # Warnings
