--- a/requirements.txt
+++ b/requirements.txt
@@ -29,6 +29,7 @@ flake8-rst-docstrings~=0.3.0
 pep8-naming~=0.13.3
 autopep8~=2.0.4
 mypy~=1.8.0
+types-pyyaml~=6.0.12.20240311
 pre-commit~=3.6.2
 isort~=5.13.2
 pyupgrade~=3.15.1
