--- a/setup.cfg
+++ b/setup.cfg
@@ -31,3 +31,6 @@ warn_unreachable = True
 warn_redundant_casts = True
 warn_unused_ignores = True
 warn_unused_configs = True
+
+[mypy-yaml.*]
+ignore_missing_imports = True
