--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -32,11 +32,11 @@ repos:
         args: ["--profile", "black", "--filter-files"]
 
   # mypy for static type checks
-  - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v1.8.0
-    hooks:
-      - id: mypy
-        additional_dependencies: [tokenize-rt==3.2.0]
+  #- repo: https://github.com/pre-commit/mirrors-mypy
+    #rev: v1.8.0
+    #hooks:
+      #- id: mypy
+        #additional_dependencies: [tokenize-rt==3.2.0]
 
   # pyupgrade for automatically upgrading syntax for newer python versions
   - repo: https://github.com/asottile/pyupgrade
