--- a/core/data/data_configs.yaml
+++ b/core/data/data_configs.yaml
@@ -1,5 +1,5 @@
 
-# PREDICTS data and processing -------------------
+# PREDICTS data processing -------------------
 
 predicts:
   # Paths to the two PREDICTS input data files
@@ -81,11 +81,10 @@ predicts:
   - Km_to_nearest_edge_of_habitat
   - Years_since_fragmentation_or_conversion
 
-# Geodata processing -------------------
+# Raster data processing -------------------
 
-geodata:
-  buffer_distances: [1, 10, 50]  # Size of buffered site polygons in km
-  glob_site_polygons:  # Output paths of buffered polygons in global projection
+raster_data:
+  global_site_polygons:  # Output paths of buffered polygons in global format
     - "../../../data/output/buff_polygons/glob_buff_polygons_1km.shp"
     - "../../../data/output/buff_polygons/glob_buff_polygons_10km.shp"
     - "../../../data/output/buff_polygons/glob_buff_polygons_50km.shp"
@@ -99,6 +98,7 @@ geodata:
 
   # Population density data
   pop_density:
+    polygon_sizes: [1, 10, 50]  # Buffered polygons to include: [1, 10, 50]
     raster_paths:  # Raster data input paths
       - "../../../data/GPW/gpw_v4_2000_30_sec.tif"
       - "../../../data/GPW/gpw_v4_2005_30_sec.tif"
@@ -134,10 +134,7 @@ geodata:
 
   # Bioclimatic variables based on temepreature and precipitation
   bioclimatic:
-    site_polygon_paths:
-      - "../../../data/output/buff_polygons/glob_buff_polygons_1km.shp"
-      - "../../../data/output/buff_polygons/glob_buff_polygons_10km.shp"
-      # - "../../../data/output/buff_polygons/glob_buff_polygons_50km.shp"
+    polygon_sizes: [1, 10]
     raster_paths:
       - "../../../data/WorldClim/Bioclimatic/wc2.1_30s_bio_1.tif"
       - "../../../data/WorldClim/Bioclimatic/wc2.1_30s_bio_4.tif"
@@ -150,7 +147,6 @@ geodata:
     output_paths:
       - "../../../data/output/environment/bioclimatic_1km.parquet"
       - "../../../data/output/environment/bioclimatic_10km.parquet"
-      # - "../../../data/output/environment/bioclimatic_50km.parquet"
     rasterstats_settings:
       metrics: mean
       include_all_pixels: True
@@ -174,9 +170,7 @@ geodata:
 
   # Topographic variables like elevation, slope, roughness
   topography:
-    site_polygon_paths:
-      - "../../../data/output/buff_polygons/glob_buff_polygons_1km.shp"
-      - "../../../data/output/buff_polygons/glob_buff_polygons_10km.shp"
+    polygon_sizes: [1, 10]
     raster_paths:
       - "../../../data/EarthEnv/topography/elevation_1KMmn_GMTEDmn.tif"
       - "../../../data/EarthEnv/topography/slope_1KMmn_GMTEDmn.tif"
@@ -198,24 +192,23 @@ geodata:
       - Terrain_roughness_10km
       - Terrain_ruggedness_index_10km
 
-  # Road network data. This is based on shapefiles rather that raster data, so
-  # follows a different structure
-  roads:
-    road_network_data:  # Input paths for road network shapefiles
-      - "../../../data/gROADS/oceania/groads-v1-oceania.shp"
-      - "../../../data/gROADS/europe/groads-v1-europe.shp"
-      - "../../../data/gROADS/africa/groads-v1-africa.shp"
-      - "../../../data/gROADS/asia/groads-v1-asia.shp"
-      - "../../../data/gROADS/americas/groads-v1-americas.shp"
-    road_density_data:  # Output paths for density data
-      - "../../../data/output/road_density/road_density_oceania.parquet"
-      - "../../../data/output/road_density/road_density_europe.parquet"
-      - "../../../data/output/road_density/road_density_africa.parquet"
-      - "../../../data/output/road_density/road_density_asia.parquet"
-      - "../../../data/output/road_density/road_density_americas.parquet"
-    un_regions:  # Each shapefile covers a UN region
-      - Oceania
-      - Europe
-      - Africa
-      - Asia
-      - Americas
+# Road network data -------------------
+roads:
+  road_network_data:  # Input paths for road network shapefiles
+    - "../../../data/gROADS/oceania/groads-v1-oceania.shp"
+    - "../../../data/gROADS/europe/groads-v1-europe.shp"
+    - "../../../data/gROADS/africa/groads-v1-africa.shp"
+    - "../../../data/gROADS/asia/groads-v1-asia.shp"
+    - "../../../data/gROADS/americas/groads-v1-americas.shp"
+  road_density_data:  # Output paths for density data
+    - "../../../data/output/road_density/road_density_oceania.parquet"
+    - "../../../data/output/road_density/road_density_europe.parquet"
+    - "../../../data/output/road_density/road_density_africa.parquet"
+    - "../../../data/output/road_density/road_density_asia.parquet"
+    - "../../../data/output/road_density/road_density_americas.parquet"
+  un_regions:  # Each shapefile covers a UN region
+    - Oceania
+    - Europe
+    - Africa
+    - Asia
+    - Americas
