--- a/core/features/feature_configs.yaml
+++ b/core/features/feature_configs.yaml
@@ -64,6 +64,14 @@ feature_engineering:
     - Precip_wettest_month_10km
     - Precip_driest_month_10km
     - Precip_seasonality_10km
+    - Elevation_1km
+    - Slope_1km
+    - Terrain_roughness_1km
+    - Terrain_ruggedness_index_1km
+    - Elevation_10km
+    - Slope_10km
+    - Terrain_roughness_10km
+    - Terrain_ruggedness_index_10km
 
   density_vars:
     - Road_density_1km
@@ -90,6 +98,16 @@ feature_engineering:
     - Precip_wettest_month_10km
     - Precip_driest_month_10km
     - Precip_seasonality_10km
+
+  topographic_vars:
+    - Elevation_1km
+    - Slope_1km
+    - Terrain_roughness_1km
+    - Terrain_ruggedness_index_1km
+    - Elevation_10km
+    - Slope_10km
+    - Terrain_roughness_10km
+    - Terrain_ruggedness_index_10km
 
   land_use_col_order:
     - Primary vegetation
